# BeeMesh

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
beemesh/: __init__.py  executable_launch.py  launch.py
beemesh/cli/: __init__.py  cli.py
beemesh/coordinator/: scheduler.py  server.py  state.py
beemesh/protocol/: models.py
beemesh/worker/: executor.py  worker.py
beemesh/workloads/: advection_tile.py  base.py  diffusion.py  executable_batch.py  pde_timestep_tile.py  python_batch.py
docs/: architecture.md  deployment.md  testing.md
docs/paper_draft/: paper.md
examples/: submit_diffusion_job.py
examples/acoustic_pulse_test/: __init__.py  launch.py  visualize.py
examples/advection_grid_test/: __init__.py  launch.py  visualize.py
examples/cpp_exec_test/: __init__.py  simulate_case  simulate_case.cpp  visualize.py
examples/hello_world_cpp/: launch.sh
examples/mandelbrot_test/: __init__.py  launch.py  visualize.py
examples/monte_carlo_test/: __init__.py  launch.py  visualize.py
examples/nn_hyperparam_test/: __init__.py  launch.py  visualize.py
examples/parallel_sweep_test/: __init__.py  launch.py  visualize.py
paper/: paper.bib  paper.md
tests/: test_executor.py  test_launch.py  test_scheduler.py  test_server.py  test_state.py
